--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,7 +15,7 @@ nav{
       background-color: var(--color-primary);
       display:flex;
       justify-content: center;
-      align-items:center;
+      align-items:end;
   }
 
   & button{
